# typoer

./: .gitignore  Cargo.toml  xxx.sh
pallets/xevent/: Cargo.toml
pallets/xevent/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
